fixed the scroll issue on mobile view.updated padding for sidebar list

--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,7 @@ hr {
         width: 13%;
     }
     .button{
-        padding: 9px;
+        padding: 15px;
     }
     body{
         font-size: 14px;
